@@ -21,12 +21,10 @@
 package org.eclipse.jetty.server;
 
 import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.io.PrintWriter;
 import java.io.StringReader;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
+import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -36,24 +34,25 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import org.eclipse.jetty.http.HttpCompliance;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpParser;
 import org.eclipse.jetty.http.HttpStatus;
 import org.eclipse.jetty.http.HttpTester;
 import org.eclipse.jetty.http.MimeTypes;
+import org.eclipse.jetty.http.UriCompliance;
 import org.eclipse.jetty.logging.StacklessLogging;
-import org.eclipse.jetty.server.LocalConnector.LocalEndPoint;
-import org.eclipse.jetty.server.handler.AbstractHandler;
-import org.eclipse.jetty.server.handler.ErrorHandler;
+import org.eclipse.jetty.server.handler.ContextRequest;
+import org.eclipse.jetty.server.handler.DumpHandler;
+import org.eclipse.jetty.server.internal.HttpChannelState;
+import org.eclipse.jetty.server.internal.HttpConnection;
 import org.eclipse.jetty.util.BufferUtil;
-import org.eclipse.jetty.util.IO;
+import org.eclipse.jetty.util.Callback;
+import org.eclipse.jetty.util.thread.Invocable;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -67,19 +66,20 @@ import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
 import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.startsWith;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class HttpConnectionTest
 {
     private static final org.slf4j.Logger LOG = LoggerFactory.getLogger(HttpConnectionTest.class);
-    private Server server;
-    private LocalConnector connector;
+    private Server _server;
+    private LocalConnector _connector;
 
     @BeforeEach
     public void init() throws Exception
     {
-        server = new Server();
+        _server = new Server();
 
         HttpConfiguration config = new HttpConfiguration();
         config.setRequestHeaderSize(1024);
@@ -87,21 +87,18 @@ public class HttpConnectionTest
         config.setSendDateHeader(true);
         HttpConnectionFactory http = new HttpConnectionFactory(config);
 
-        connector = new LocalConnector(server, http, null);
-        connector.setIdleTimeout(5000);
-        server.addConnector(connector);
-        server.setHandler(new DumpHandler());
-        ErrorHandler eh = new ErrorHandler();
-        eh.setServer(server);
-        server.addBean(eh);
-        server.start();
+        _connector = new LocalConnector(_server, http, null);
+        _connector.setIdleTimeout(5000);
+        _server.addConnector(_connector);
+        _server.setHandler(new DumpHandler());
+        _server.start();
     }
 
     @AfterEach
     public void destroy() throws Exception
     {
-        server.stop();
-        server.join();
+        _server.stop();
+        _server.join();
     }
 
     @Test
@@ -113,7 +110,7 @@ public class HttpConnectionTest
             int offset = 0;
 
             // Chunk last
-            response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
                 "Content-Type: text/plain\r\n" +
@@ -128,7 +125,7 @@ public class HttpConnectionTest
             checkContains(response, offset, "12345");
 
             offset = 0;
-            response = connector.getResponse("GET /R2 HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET /R2 HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
                 "Content-Type: text/plain\r\n" +
@@ -156,17 +153,17 @@ public class HttpConnectionTest
     @Test
     public void testHttp09NoVersion() throws Exception
     {
-        connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616);
+        _connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616);
         String request = "GET / HTTP/0.9\r\n\r\n";
-        String response = connector.getResponse(request);
+        String response = _connector.getResponse(request);
         assertThat(response, containsString("505 HTTP Version Not Supported"));
-        assertThat(response, containsString("reason: Unsupported Version"));
+        assertThat(response, containsString("<th>MESSAGE:</th><td>Unsupported Version</td>"));
 
-        connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC7230);
+        _connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC7230);
         request = "GET / HTTP/0.9\r\n\r\n";
-        response = connector.getResponse(request);
+        response = _connector.getResponse(request);
         assertThat(response, containsString("505 HTTP Version Not Supported"));
-        assertThat(response, containsString("reason: Unsupported Version"));
+        assertThat(response, containsString("<th>MESSAGE:</th><td>Unsupported Version</td>"));
     }
 
     /**
@@ -175,11 +172,11 @@ public class HttpConnectionTest
     @Test
     public void testHttp09NoHeaders() throws Exception
     {
-        connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616);
+        _connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616);
         // header looking like another request is ignored
         String request = "GET /one\r\nGET :/two\r\n\r\n";
-        String response = BufferUtil.toString(connector.executeRequest(request).waitForOutput(10, TimeUnit.SECONDS));
-        assertThat(response, containsString("pathInfo=/"));
+        String response = BufferUtil.toString(_connector.executeRequest(request).waitForOutput(10, TimeUnit.SECONDS));
+        assertThat(response, containsString("pathInContext=/one"));
         assertThat(response, not(containsString("two")));
     }
 
@@ -189,11 +186,11 @@ public class HttpConnectionTest
     @Test
     public void testHttp09MultipleRequests() throws Exception
     {
-        connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616);
+        _connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616);
 
         // Verify that pipelining does not work with HTTP/0.9.
         String requests = "GET /?id=123\r\n\r\nGET /?id=456\r\n\r\n";
-        LocalEndPoint endp = connector.executeRequest(requests);
+        LocalConnector.LocalEndPoint endp = _connector.executeRequest(requests);
         String response = BufferUtil.toString(endp.waitForOutput(10, TimeUnit.SECONDS));
 
         assertThat(response, containsString("id=123"));
@@ -223,54 +220,52 @@ public class HttpConnectionTest
             "\r\n" +
             "12345";
 
-        String response = connector.getResponse(request);
-        assertThat(response, containsString(" 200 OK"));
+        String response = _connector.getResponse(request);
+        assertThat(response, containsString(" 400 Bad Request"));
         assertThat(response, containsString("Connection: close"));
-        assertThat(response, containsString("Early EOF"));
+        assertThat(response, containsString("<th>MESSAGE:</th><td>Early EOF</td>"));
+    }
+
+    public static Stream<int[]> contentLengths()
+    {
+        return Stream.of(
+            new int[] {0, 8},
+            new int[] {8, 0},
+            new int[] {8, 8},
+            new int[] {0, 8, 0},
+            new int[] {1, 2, 3, 4, 5, 6, 7, 8},
+            new int[] {8, 2, 1},
+            new int[] {0, 0},
+            new int[] {8, 0, 8},
+            new int[] {-1, 8},
+            new int[] {8, -1},
+            new int[] {-1, 8, -1},
+            new int[] {-1, -1},
+            new int[] {8, -1, 8}
+        );
     }
 
     /**
      * More then 1 Content-Length is a bad requests per HTTP rfcs.
      */
-    @Test
-    public void testHttp11MultipleContentLength() throws Exception
+    @ParameterizedTest
+    @MethodSource("contentLengths")
+    public void testHttp11MultipleContentLength(int[] clen) throws Exception
     {
         HttpParser.LOG.info("badMessage: 400 Bad messages EXPECTED...");
-        int[][] contentLengths = {
-            {0, 8},
-            {8, 0},
-            {8, 8},
-            {0, 8, 0},
-            {1, 2, 3, 4, 5, 6, 7, 8},
-            {8, 2, 1},
-            {0, 0},
-            {8, 0, 8},
-            {-1, 8},
-            {8, -1},
-            {-1, 8, -1},
-            {-1, -1},
-            {8, -1, 8},
-            };
+        StringBuilder request = new StringBuilder();
+        request.append("POST / HTTP/1.1\r\n");
+        request.append("Host: local\r\n");
+        for (int i : clen)
+            request.append("Content-Length: ").append(i).append("\r\n");
+        request.append("Content-Type: text/plain\r\n");
+        request.append("Connection: close\r\n");
+        request.append("\r\n");
+        request.append("abcdefgh"); // actual content of 8 bytes
 
-        for (int x = 0; x < contentLengths.length; x++)
-        {
-            StringBuilder request = new StringBuilder();
-            request.append("POST /?id=").append(Integer.toString(x)).append(" HTTP/1.1\r\n");
-            request.append("Host: local\r\n");
-            int[] clen = contentLengths[x];
-            for (int n = 0; n < clen.length; n++)
-            {
-                request.append("Content-Length: ").append(Integer.toString(clen[n])).append("\r\n");
-            }
-            request.append("Content-Type: text/plain\r\n");
-            request.append("Connection: close\r\n");
-            request.append("\r\n");
-            request.append("abcdefgh"); // actual content of 8 bytes
-
-            String rawResponse = connector.getResponse(request.toString());
-            HttpTester.Response response = HttpTester.parseResponse(rawResponse);
-            assertThat("Response.status", response.getStatus(), is(HttpServletResponse.SC_BAD_REQUEST));
-        }
+        String rawResponse = _connector.getResponse(request.toString());
+        HttpTester.Response response = HttpTester.parseResponse(rawResponse);
+        assertThat("Response.status", response.getStatus(), is(HttpStatus.BAD_REQUEST_400));
     }
 
     static final int CHUNKED = -1;
@@ -309,25 +304,15 @@ public class HttpConnectionTest
         StringBuilder request = new StringBuilder();
         request.append("POST / HTTP/1.1\r\n");
         request.append("Host: local\r\n");
-        for (int n = 0; n < contentLengths.length; n++)
+        for (int contentLength : contentLengths)
         {
-            switch (contentLengths[n])
+            switch (contentLength)
             {
-                case CHUNKED:
-                    request.append("Transfer-Encoding: chunked\r\n");
-                    break;
-                case DQUOTED_CHUNKED:
-                    request.append("Transfer-Encoding: \"chunked\"\r\n");
-                    break;
-                case BAD_CHUNKED:
-                    request.append("Transfer-Encoding: 'chunked'\r\n");
-                    break;
-                case UNKNOWN_TE:
-                    request.append("Transfer-Encoding: bogus\r\n");
-                    break;
-                default:
-                    request.append("Content-Length: ").append(contentLengths[n]).append("\r\n");
-                    break;
+                case CHUNKED -> request.append("Transfer-Encoding: chunked\r\n");
+                case DQUOTED_CHUNKED -> request.append("Transfer-Encoding: \"chunked\"\r\n");
+                case BAD_CHUNKED -> request.append("Transfer-Encoding: 'chunked'\r\n");
+                case UNKNOWN_TE -> request.append("Transfer-Encoding: bogus\r\n");
+                default -> request.append("Content-Length: ").append(contentLength).append("\r\n");
             }
         }
         request.append("Content-Type: text/plain\r\n");
@@ -336,9 +321,9 @@ public class HttpConnectionTest
         request.append("abcdefgh"); // actual content of 8 bytes
         request.append("\r\n0;\r\n\r\n"); // last chunk
 
-        String rawResponse = connector.getResponse(request.toString());
+        String rawResponse = _connector.getResponse(request.toString());
         HttpTester.Response response = HttpTester.parseResponse(rawResponse);
-        assertThat("Response.status", response.getStatus(), is(HttpServletResponse.SC_BAD_REQUEST));
+        assertThat("Response.status", response.getStatus(), is(HttpStatus.BAD_REQUEST_400));
     }
 
     /**
@@ -347,14 +332,14 @@ public class HttpConnectionTest
     public static Stream<Arguments> http11TransferEncodingChunked()
     {
         return Stream.of(
-            Arguments.of(Arrays.asList("chunked, ")), // results in 1 entry
-            Arguments.of(Arrays.asList(", chunked")),
+            Arguments.of(List.of("chunked, ")), // results in 1 entry
+            Arguments.of(List.of(", chunked")),
 
             // invalid tokens with chunked as last
             // no conflicts, chunked token is specified and is last, will result in chunked
-            Arguments.of(Arrays.asList("bogus, chunked")),
-            Arguments.of(Arrays.asList("'chunked', chunked")), // apostrophe characters with and without
-            Arguments.of(Arrays.asList("identity, chunked")), // identity was removed in RFC2616 errata and has been dropped in RFC7230
+            Arguments.of(List.of("bogus, chunked")),
+            Arguments.of(List.of("'chunked', chunked")), // apostrophe characters with and without
+            Arguments.of(List.of("identity, chunked")), // identity was removed in RFC2616 errata and has been dropped in RFC7230
 
             // multiple headers
             Arguments.of(Arrays.asList("identity", "chunked")), // 2 separate headers
@@ -380,11 +365,9 @@ public class HttpConnectionTest
         request.append("abcdefgh"); // actual content of 8 bytes
         request.append("\r\n0;\r\n\r\n"); // last chunk
 
-        System.out.println(request.toString());
-
-        String rawResponse = connector.getResponse(request.toString());
+        String rawResponse = _connector.getResponse(request.toString());
         HttpTester.Response response = HttpTester.parseResponse(rawResponse);
-        assertThat("Response.status (" + response.getReason() + ")", response.getStatus(), is(HttpServletResponse.SC_OK));
+        assertThat("Response.status (" + response.getReason() + ")", response.getStatus(), is(HttpStatus.OK_200));
     }
 
     public static Stream<Arguments> http11TransferEncodingInvalidChunked()
@@ -393,25 +376,25 @@ public class HttpConnectionTest
             // == Results in 400 Bad Request
             Arguments.of(Arrays.asList("bogus", "identity")), // 2 separate headers
 
-            Arguments.of(Arrays.asList("bad")),
-            Arguments.of(Arrays.asList("identity")),  // identity was removed in RFC2616 errata and has been dropped in RFC7230
-            Arguments.of(Arrays.asList("'chunked'")), // apostrophe characters
-            Arguments.of(Arrays.asList("`chunked`")), // backtick "quote" characters
-            Arguments.of(Arrays.asList("[chunked]")), // bracketed (seen as mistake in several REST libraries)
-            Arguments.of(Arrays.asList("{chunked}")), // json'd (seen as mistake in several REST libraries)
-            Arguments.of(Arrays.asList("\u201Cchunked\u201D")), // opening and closing (fancy) double quotes characters
+            Arguments.of(List.of("bad")),
+            Arguments.of(List.of("identity")),  // identity was removed in RFC2616 errata and has been dropped in RFC7230
+            Arguments.of(List.of("'chunked'")), // apostrophe characters
+            Arguments.of(List.of("`chunked`")), // backtick "quote" characters
+            Arguments.of(List.of("[chunked]")), // bracketed (seen as mistake in several REST libraries)
+            Arguments.of(List.of("{chunked}")), // json'd (seen as mistake in several REST libraries)
+            Arguments.of(List.of("\u201Cchunked\u201D")), // opening and closing (fancy) double quotes characters
 
             // invalid tokens with chunked not as last
-            Arguments.of(Arrays.asList("chunked, bogus")),
-            Arguments.of(Arrays.asList("chunked, 'chunked'")),
-            Arguments.of(Arrays.asList("chunked, identity")),
-            Arguments.of(Arrays.asList("chunked, identity, chunked")), // duplicate chunked
-            Arguments.of(Arrays.asList("chunked", "identity")), // 2 separate header lines
+            Arguments.of(List.of("chunked, bogus")),
+            Arguments.of(List.of("chunked, 'chunked'")),
+            Arguments.of(List.of("chunked, identity")),
+            Arguments.of(List.of("chunked, identity, chunked")), // duplicate chunked
+            Arguments.of(List.of("chunked", "identity")), // 2 separate header lines
 
             // multiple chunked tokens present
-            Arguments.of(Arrays.asList("chunked", "identity", "chunked")), // 3 separate header lines
-            Arguments.of(Arrays.asList("chunked", "chunked")), // 2 separate header lines
-            Arguments.of(Arrays.asList("chunked, chunked")) // on same line
+            Arguments.of(List.of("chunked", "identity", "chunked")), // 3 separate header lines
+            Arguments.of(List.of("chunked", "chunked")), // 2 separate header lines
+            Arguments.of(List.of("chunked, chunked")) // on same line
         );
     }
 
@@ -434,30 +417,28 @@ public class HttpConnectionTest
         request.append("abcdefgh"); // actual content of 8 bytes
         request.append("\r\n0;\r\n\r\n"); // last chunk
 
-        System.out.println(request.toString());
-
-        String rawResponse = connector.getResponse(request.toString());
+        String rawResponse = _connector.getResponse(request.toString());
         HttpTester.Response response = HttpTester.parseResponse(rawResponse);
-        assertThat("Response.status", response.getStatus(), is(HttpServletResponse.SC_BAD_REQUEST));
+        assertThat("Response.status", response.getStatus(), is(HttpStatus.BAD_REQUEST_400));
     }
 
     @Test
     public void testNoPath() throws Exception
     {
-        String response = connector.getResponse("GET http://localhost:80 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET http://localhost:80 HTTP/1.1\r\n" +
             "Host: localhost:80\r\n" +
             "Connection: close\r\n" +
             "\r\n");
 
         int offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
-        checkContains(response, offset, "pathInfo=/");
+        checkContains(response, offset, "pathInContext=/");
     }
 
     @Test
     public void testDate() throws Exception
     {
-        String response = connector.getResponse("GET / HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET / HTTP/1.1\r\n" +
             "Host: localhost:80\r\n" +
             "Connection: close\r\n" +
             "\r\n");
@@ -465,13 +446,13 @@ public class HttpConnectionTest
         int offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
         offset = checkContains(response, offset, "Date: ");
-        checkContains(response, offset, "pathInfo=/");
+        checkContains(response, offset, "pathInContext=/");
     }
 
     @Test
     public void testSetDate() throws Exception
     {
-        String response = connector.getResponse("GET /?date=1+Jan+1970 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /?date=1+Jan+1970 HTTP/1.1\r\n" +
             "Host: localhost:80\r\n" +
             "Connection: close\r\n" +
             "\r\n");
@@ -479,13 +460,13 @@ public class HttpConnectionTest
         int offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
         offset = checkContains(response, offset, "Date: 1 Jan 1970");
-        checkContains(response, offset, "pathInfo=/");
+        checkContains(response, offset, "pathInContext=/");
     }
 
     @Test
     public void testBadNoPath() throws Exception
     {
-        String response = connector.getResponse("GET http://localhost:80/../cheat HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET http://localhost:80/../cheat HTTP/1.1\r\n" +
             "Host: localhost:80\r\n" +
             "\r\n");
         checkContains(response, 0, "HTTP/1.1 400");
@@ -494,100 +475,107 @@ public class HttpConnectionTest
     @Test
     public void testOKPathDotDotPath() throws Exception
     {
-        String response = connector.getResponse("GET /ooops/../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
+        String response = _connector.getResponse("GET /ooops/../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
         checkContains(response, 0, "HTTP/1.1 200 OK");
-        checkContains(response, 0, "pathInfo=/path");
+        checkContains(response, 0, "pathInContext=/path");
     }
 
     @Test
     public void testBadPathDotDotPath() throws Exception
     {
-        String response = connector.getResponse("GET /ooops/../../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
+        String response = _connector.getResponse("GET /ooops/../../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
         checkContains(response, 0, "HTTP/1.1 400 ");
-        checkContains(response, 0, "reason: Bad Request");
+        checkContains(response, 0, "<th>MESSAGE:</th><td>Bad Request</td>");
     }
 
     @Test
     public void testBadDotDotPath() throws Exception
     {
-        String response = connector.getResponse("GET ../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
+        String response = _connector.getResponse("GET ../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
         checkContains(response, 0, "HTTP/1.1 400 ");
-        checkContains(response, 0, "reason: Bad Request");
+        checkContains(response, 0, "<th>MESSAGE:</th><td>Bad Request</td>");
     }
 
     @Test
     public void testBadSlashDotDotPath() throws Exception
     {
-        String response = connector.getResponse("GET /../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
+        String response = _connector.getResponse("GET /../path HTTP/1.0\r\nHost: localhost:80\r\n\n");
         checkContains(response, 0, "HTTP/1.1 400 ");
-        checkContains(response, 0, "reason: Bad Request");
+        checkContains(response, 0, "<th>MESSAGE:</th><td>Bad Request</td>");
     }
 
     @Test
-    public void test09() throws Exception
+    public void test09()
     {
-        connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616_LEGACY);
-        LocalEndPoint endp = connector.executeRequest("GET /R1\n");
+        _connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration().setHttpCompliance(HttpCompliance.RFC2616_LEGACY);
+        LocalConnector.LocalEndPoint endp = _connector.executeRequest("GET /R1\n");
         endp.waitUntilClosed();
         String response = BufferUtil.toString(endp.takeOutput());
 
         int offset = 0;
         checkNotContained(response, offset, "HTTP/1.1");
         checkNotContained(response, offset, "200");
-        checkContains(response, offset, "pathInfo=/R1");
+        checkContains(response, offset, "httpURI=http://0.0.0.0/R1");
+        checkContains(response, offset, "pathInContext=/R1");
     }
 
     @Test
     public void testSimple() throws Exception
     {
-        String response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
 
         int offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
-        checkContains(response, offset, "/R1");
+        checkContains(response, offset, "httpURI=http://localhost/R1");
+        checkContains(response, offset, "pathInContext=/R1");
     }
 
     @Test
     public void testEmptyNotPersistent() throws Exception
     {
-        String response = connector.getResponse("GET /R1?empty=true HTTP/1.0\r\n" +
-            "Host: localhost\r\n" +
-            "\r\n");
+        String response = _connector.getResponse("""
+            GET /R1?empty=true HTTP/1.0\r
+            Host: localhost\r
+            \r
+            """);
 
         int offset = 0;
-        offset = checkContains(response, offset, "HTTP/1.1 200");
-        checkNotContained(response, offset, "Content-Length");
+        checkContains(response, offset, "HTTP/1.1 200");
 
-        response = connector.getResponse("GET /R1?empty=true HTTP/1.1\r\n" +
-            "Host: localhost\r\n" +
-            "Connection: close\r\n" +
-            "\r\n");
+        response = _connector.getResponse("""
+            GET /R1?empty=true HTTP/1.1\r
+            Host: localhost\r
+            Connection: close\r
+            \r
+            """);
 
-        offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
         checkContains(response, offset, "Connection: close");
-        checkNotContained(response, offset, "Content-Length");
     }
 
     @Test
     public void testEmptyPersistent() throws Exception
     {
-        String response = connector.getResponse("GET /R1?empty=true HTTP/1.0\r\n" +
-            "Host: localhost\r\n" +
-            "Connection: keep-alive\r\n" +
-            "\r\n");
+        String response = _connector.getResponse("""
+            GET /R1?empty=true HTTP/1.0\r
+            Host: localhost\r
+            Connection: keep-alive\r
+            \r
+            """);
 
         int offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
         checkContains(response, offset, "Content-Length: 0");
         checkNotContained(response, offset, "Connection: close");
 
-        response = connector.getResponse("GET /R1?empty=true HTTP/1.1\r\n" +
-            "Host: localhost\r\n" +
-            "\r\n");
+        response = _connector.getResponse("""
+            GET /R1?empty=true HTTP/1.1\r
+            Host: localhost\r
+            \r
+            """);
 
         offset = 0;
         offset = checkContains(response, offset, "HTTP/1.1 200");
@@ -598,7 +586,7 @@ public class HttpConnectionTest
     @Test
     public void testEmptyChunk() throws Exception
     {
-        String response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Transfer-Encoding: chunked\r\n" +
             "Content-Type: text/plain\r\n" +
@@ -615,7 +603,7 @@ public class HttpConnectionTest
     @Test
     public void testChunk() throws Exception
     {
-        String response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Transfer-Encoding: chunked\r\n" +
             "Content-Type: text/plain\r\n" +
@@ -635,7 +623,7 @@ public class HttpConnectionTest
     @Test
     public void testChunkTrailer() throws Exception
     {
-        String response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Transfer-Encoding: chunked\r\n" +
             "Content-Type: text/plain\r\n" +
@@ -657,8 +645,8 @@ public class HttpConnectionTest
     public void testChunkNoTrailer() throws Exception
     {
         // Expect TimeoutException logged
-        connector.setIdleTimeout(1000);
-        String response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+        _connector.setIdleTimeout(1000);
+        String response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Transfer-Encoding: chunked\r\n" +
             "Content-Type: text/plain\r\n" +
@@ -676,12 +664,12 @@ public class HttpConnectionTest
     @Test
     public void testHead() throws Exception
     {
-        String responsePOST = connector.getResponse("POST /R1 HTTP/1.1\r\n" +
+        String responsePOST = _connector.getResponse("POST /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
 
-        String responseHEAD = connector.getResponse("HEAD /R1 HTTP/1.1\r\n" +
+        String responseHEAD = _connector.getResponse("HEAD /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
@@ -721,17 +709,17 @@ public class HttpConnectionTest
 
         assertThat(postLine, equalTo(headLine));
         assertThat(postDate, equalTo(headDate));
-        assertTrue(postHeaders.equals(headHeaders));
+        assertEquals(postHeaders, headHeaders);
     }
 
     @Test
     public void testHeadChunked() throws Exception
     {
-        String responsePOST = connector.getResponse("POST /R1?no-content-length=true HTTP/1.1\r\n" +
+        String responsePOST = _connector.getResponse("POST /R1?no-content-length=true HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "\r\n", false, 1, TimeUnit.SECONDS);
 
-        String responseHEAD = connector.getResponse("HEAD /R1?no-content-length=true HTTP/1.1\r\n" +
+        String responseHEAD = _connector.getResponse("HEAD /R1?no-content-length=true HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "\r\n", true, 1, TimeUnit.SECONDS);
 
@@ -770,7 +758,7 @@ public class HttpConnectionTest
 
         assertThat(postLine, equalTo(headLine));
         assertThat(postDate, equalTo(headDate));
-        assertTrue(postHeaders.equals(headHeaders));
+        assertEquals(postHeaders, headHeaders);
     }
 
     @Test
@@ -779,7 +767,7 @@ public class HttpConnectionTest
         LOG.info("badMessage: Number formate exception expected ...");
         String response;
 
-        response = connector.getResponse("GET http://localhost:EXPECTED_NUMBER_FORMAT_EXCEPTION/ HTTP/1.1\r\n" +
+        response = _connector.getResponse("GET http://localhost:EXPECTED_NUMBER_FORMAT_EXCEPTION/ HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
@@ -791,8 +779,10 @@ public class HttpConnectionTest
     {
         String response;
 
-        response = connector.getResponse("GET / HTTP/1.1\r\n" +
-            "\r\n");
+        response = _connector.getResponse("""
+            GET / HTTP/1.1
+            
+            """);
         checkContains(response, 0, "HTTP/1.1 400");
     }
 
@@ -801,7 +791,18 @@ public class HttpConnectionTest
     {
         String response;
 
-        response = connector.getResponse("GET / HTTP/1.1\r\n" +
+        response = _connector.getResponse("GET / HTTP/1.1\r\n" +
+            "Host:\r\n" +
+            "\r\n");
+        checkContains(response, 0, "HTTP/1.1 400");
+    }
+
+    @Test
+    public void testEmptyHostAbsolute() throws Exception
+    {
+        String response;
+
+        response = _connector.getResponse("GET scheme:/// HTTP/1.1\r\n" +
             "Host:\r\n" +
             "\r\n");
         checkContains(response, 0, "HTTP/1.1 200");
@@ -810,7 +811,7 @@ public class HttpConnectionTest
     @Test
     public void testBadURIencoding() throws Exception
     {
-        String response = connector.getResponse("GET /bad/encoding%x HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /bad/encoding%x HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
@@ -818,18 +819,19 @@ public class HttpConnectionTest
     }
 
     @Test
+    @Disabled("review this test. seems a security issue to fallback from utf-8 to iso-1, was there a reason to do that?")
     public void testBadUTF8FallsbackTo8859() throws Exception
     {
         LOG.info("badMessage: bad encoding expected ...");
         String response;
 
-        response = connector.getResponse("GET /foo/bar%c0%00 HTTP/1.1\r\n" +
+        response = _connector.getResponse("GET /foo/bar%c0%00 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
         checkContains(response, 0, "HTTP/1.1 400");
 
-        response = connector.getResponse("GET /bad/utf8%c1 HTTP/1.1\r\n" +
+        response = _connector.getResponse("GET /bad/utf8%c1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
@@ -841,7 +843,7 @@ public class HttpConnectionTest
     {
         int offset = 0;
 
-        String response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Transfer-Encoding: chunked\r\n" +
             "Content-Type: text/plain\r\n" +
@@ -860,91 +862,24 @@ public class HttpConnectionTest
     @Test
     public void testEmptyFlush() throws Exception
     {
-        server.stop();
-        server.setHandler(new AbstractHandler()
+        _server.stop();
+        _server.setHandler(new Handler.Processor()
         {
-            @SuppressWarnings("unused")
             @Override
-            public void handle(String target, Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void process(Request request, Response response, Callback callback)
             {
                 response.setStatus(200);
-                OutputStream out = response.getOutputStream();
-                out.flush();
-                out.flush();
+                response.write(false, callback);
             }
         });
-        server.start();
+        _server.start();
 
-        String response = connector.getResponse("GET / HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET / HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Connection: close\r\n" +
             "\r\n");
 
         assertThat(response, Matchers.containsString("200 OK"));
-    }
-
-    @Test
-    public void testCharset() throws Exception
-    {
-        String response = null;
-        try
-        {
-            int offset = 0;
-            response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
-                "Host: localhost\r\n" +
-                "Transfer-Encoding: chunked\r\n" +
-                "Content-Type: text/plain; charset=utf-8\r\n" +
-                "Connection: close\r\n" +
-                "\r\n" +
-                "5;\r\n" +
-                "12345\r\n" +
-                "0;\r\n" +
-                "\r\n");
-            offset = checkContains(response, offset, "HTTP/1.1 200");
-            offset = checkContains(response, offset, "/R1");
-            offset = checkContains(response, offset, "encoding=UTF-8");
-            checkContains(response, offset, "12345");
-
-            offset = 0;
-            response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
-                "Host: localhost\r\n" +
-                "Transfer-Encoding: chunked\r\n" +
-                "Content-Type: text/plain; charset =  iso-8859-1 ; other=value\r\n" +
-                "Connection: close\r\n" +
-                "\r\n" +
-                "5;\r\n" +
-                "12345\r\n" +
-                "0;\r\n" +
-                "\r\n");
-            offset = checkContains(response, offset, "HTTP/1.1 200");
-            offset = checkContains(response, offset, "encoding=iso-8859-1");
-            offset = checkContains(response, offset, "/R1");
-            checkContains(response, offset, "12345");
-
-            offset = 0;
-            LOG.info("Expecting java.io.UnsupportedEncodingException");
-            response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
-                "Host: localhost\r\n" +
-                "Transfer-Encoding: chunked\r\n" +
-                "Content-Type: text/plain; charset=unknown\r\n" +
-                "Connection: close\r\n" +
-                "\r\n" +
-                "5;\r\n" +
-                "12345\r\n" +
-                "0;\r\n" +
-                "\r\n");
-
-            offset = checkContains(response, offset, "HTTP/1.1 200");
-            offset = checkContains(response, offset, "encoding=unknown");
-            offset = checkContains(response, offset, "/R1");
-            checkContains(response, offset, "UnsupportedEncodingException");
-        }
-        catch (Exception e)
-        {
-            if (response != null)
-                System.err.println(response);
-            throw e;
-        }
     }
 
     @Test
@@ -971,23 +906,23 @@ public class HttpConnectionTest
                 "\r\n" +
                 "abcdefghij\r\n";
 
-        LocalEndPoint endp = connector.executeRequest(requests);
+        LocalConnector.LocalEndPoint endp = _connector.executeRequest(requests);
         String response = endp.getResponse() + endp.getResponse();
 
         offset = checkContains(response, offset, "HTTP/1.1 200");
-        offset = checkContains(response, offset, "pathInfo=/R1");
+        offset = checkContains(response, offset, "pathInContext=/R1");
         offset = checkContains(response, offset, "1234");
         checkNotContained(response, offset, "56789");
         offset = checkContains(response, offset, "HTTP/1.1 200");
-        offset = checkContains(response, offset, "pathInfo=/R2");
-        offset = checkContains(response, offset, "encoding=UTF-8");
+        offset = checkContains(response, offset, "pathInContext=/R2");
+        offset = checkContains(response, offset, "charset=UTF-8");
         checkContains(response, offset, "abcdefghij");
     }
 
     @Test
     public void testUnconsumedTimeout() throws Exception
     {
-        connector.setIdleTimeout(500);
+        _connector.setIdleTimeout(500);
         int offset = 0;
         String requests =
             "GET /R1?read=4 HTTP/1.1\r\n" +
@@ -999,11 +934,11 @@ public class HttpConnectionTest
                 "12345\r\n";
 
         long start = TimeUnit.NANOSECONDS.toMillis(System.nanoTime());
-        String response = connector.getResponse(requests, 2000, TimeUnit.MILLISECONDS);
+        String response = _connector.getResponse(requests, 2000, TimeUnit.MILLISECONDS);
         assertThat(TimeUnit.NANOSECONDS.toMillis(System.nanoTime()) - start, lessThanOrEqualTo(2000L));
 
         offset = checkContains(response, offset, "HTTP/1.1 200");
-        offset = checkContains(response, offset, "pathInfo=/R1");
+        offset = checkContains(response, offset, "pathInContext=/R1");
         offset = checkContains(response, offset, "1234");
         checkNotContained(response, offset, "56789");
     }
@@ -1032,13 +967,12 @@ public class HttpConnectionTest
                 "\r\n" +
                 "abcdefghij\r\n";
 
-        LocalEndPoint endp = connector.executeRequest(requests);
+        LocalConnector.LocalEndPoint endp = _connector.executeRequest(requests);
         String response = endp.getResponse() + endp.getResponse();
 
         offset = checkContains(response, offset, "HTTP/1.1 499");
         offset = checkContains(response, offset, "HTTP/1.1 200");
         offset = checkContains(response, offset, "/R2");
-        offset = checkContains(response, offset, "encoding=UTF-8");
         checkContains(response, offset, "abcdefghij");
     }
 
@@ -1051,6 +985,7 @@ public class HttpConnectionTest
                 "Host: localhost\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
                 "Content-Type: application/data; charset=utf-8\r\n" +
+                "Some: header\r\n" +
                 "\r\n" +
                 "5;\r\n" +
                 "12345\r\n" +
@@ -1066,13 +1001,14 @@ public class HttpConnectionTest
                 "\r\n" +
                 "abcdefghij\r\n";
 
-        LocalEndPoint endp = connector.executeRequest(requests);
+        LocalConnector.LocalEndPoint endp = _connector.executeRequest(requests);
         String response = endp.getResponse() + endp.getResponse();
 
+        assertThat(response, not(containsString("Some: header")));
         offset = checkContains(response, offset, "HTTP/1.1 599");
         offset = checkContains(response, offset, "HTTP/1.1 200");
         offset = checkContains(response, offset, "/R2");
-        offset = checkContains(response, offset, "encoding=UTF-8");
+        offset = checkContains(response, offset, "text/plain; charset=UTF-8");
         checkContains(response, offset, "abcdefghij");
     }
 
@@ -1098,12 +1034,11 @@ public class HttpConnectionTest
             "\r\n" +
             "abcdefghij\r\n";
 
-        try (StacklessLogging stackless = new StacklessLogging(HttpChannel.class))
+        try (StacklessLogging ignored = new StacklessLogging(ContextRequest.class))
         {
             LOG.info("EXPECTING: java.lang.IllegalStateException...");
-            String response = connector.getResponse(requests);
+            String response = _connector.getResponse(requests);
             offset = checkContains(response, offset, "HTTP/1.1 500");
-            offset = checkContains(response, offset, "Connection: close");
             checkNotContained(response, offset, "HTTP/1.1 200");
         }
     }
@@ -1115,7 +1050,7 @@ public class HttpConnectionTest
         try
         {
             int offset = 0;
-            response = connector.getResponse("GET /R1 HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET /R1 HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Connection: TE, close\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
@@ -1152,7 +1087,7 @@ public class HttpConnectionTest
             {
                 cookie += "xxxxxxxxxxxx";
             }
-            response = connector.getResponse("GET / HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET / HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Cookie: " + cookie + "\r\n" +
                 "\r\n"
@@ -1187,9 +1122,9 @@ public class HttpConnectionTest
         }
         request.append("\r\n");
 
-        String response = connector.getResponse(request.toString());
+        String response = _connector.getResponse(request.toString());
         offset = checkContains(response, offset, "HTTP/1.1 431");
-        checkContains(response, offset, "<h1>Bad Message 431</h1>");
+        checkContains(response, offset, "<h2>HTTP ERROR 431 Request Header Fields Too Large</h2>");
     }
 
     @Test
@@ -1202,31 +1137,30 @@ public class HttpConnectionTest
         }
         final String longstr = str;
         final CountDownLatch checkError = new CountDownLatch(1);
-        server.stop();
-        server.setHandler(new AbstractHandler()
+        _server.stop();
+        _server.setHandler(new Handler.Processor()
         {
-            @SuppressWarnings("unused")
             @Override
-            public void handle(String target, Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void process(Request request, Response response, Callback callback)
             {
-                baseRequest.setHandled(true);
-                response.setHeader(HttpHeader.CONTENT_TYPE.toString(), MimeTypes.Type.TEXT_HTML.toString());
-                response.setHeader("LongStr", longstr);
-                PrintWriter writer = response.getWriter();
-                writer.write("<html><h1>FOO</h1></html>");
-                writer.flush();
-                if (writer.checkError())
-                    checkError.countDown();
-                response.flushBuffer();
+                response.getHeaders().put(HttpHeader.CONTENT_TYPE.toString(), MimeTypes.Type.TEXT_HTML.toString());
+                response.getHeaders().put("LongStr", longstr);
+                response.write(false,
+                    Callback.from(callback::succeeded, t ->
+                    {
+                        checkError.countDown();
+                        callback.failed(t);
+                    }),
+                    BufferUtil.toBuffer("<html><h1>FOO</h1></html>"));
             }
         });
-        server.start();
+        _server.start();
 
         String response = null;
-        try (StacklessLogging stackless = new StacklessLogging(HttpChannel.class))
+        try (StacklessLogging stackless = new StacklessLogging(HttpChannelState.class))
         {
             LOG.info("Expect IOException: Response header too large...");
-            response = connector.getResponse("GET / HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET / HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "\r\n"
             );
@@ -1245,35 +1179,34 @@ public class HttpConnectionTest
     @Test
     public void testAllowedLargeResponse() throws Exception
     {
-        connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setResponseHeaderSize(16 * 1024);
-        connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setOutputBufferSize(8 * 1024);
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setResponseHeaderSize(16 * 1024);
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setOutputBufferSize(8 * 1024);
 
         byte[] bytes = new byte[12 * 1024];
         Arrays.fill(bytes, (byte)'X');
         final String longstr = "thisisastringthatshouldreachover12kbytes-" + new String(bytes, StandardCharsets.ISO_8859_1) + "_Z_";
         final CountDownLatch checkError = new CountDownLatch(1);
-        server.stop();
-        server.setHandler(new AbstractHandler()
+        _server.stop();
+        _server.setHandler(new Handler.Processor()
         {
-            @SuppressWarnings("unused")
             @Override
-            public void handle(String target, Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void process(Request request, Response response, Callback callback)
             {
-                baseRequest.setHandled(true);
-                response.setHeader(HttpHeader.CONTENT_TYPE.toString(), MimeTypes.Type.TEXT_HTML.toString());
-                response.setHeader("LongStr", longstr);
-                PrintWriter writer = response.getWriter();
-                writer.write("<html><h1>FOO</h1></html>");
-                writer.flush();
-                if (writer.checkError())
-                    checkError.countDown();
-                response.flushBuffer();
+                response.getHeaders().put(HttpHeader.CONTENT_TYPE.toString(), MimeTypes.Type.TEXT_HTML.toString());
+                response.getHeaders().put("LongStr", longstr);
+
+                response.write(false,
+                    Callback.from(callback::succeeded, t ->
+                    {
+                        checkError.countDown();
+                        callback.failed(t);
+                    }),
+                    BufferUtil.toBuffer("<html><h1>FOO</h1></html>"));
             }
         });
-        server.start();
+        _server.start();
 
-        String response = null;
-        response = connector.getResponse("GET / HTTP/1.1\r\n" +
+        String response = _connector.getResponse("GET / HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "\r\n"
         );
@@ -1292,7 +1225,7 @@ public class HttpConnectionTest
         {
             int offset = 0;
 
-            response = connector.getResponse("OPTIONS * HTTP/1.1\r\n" +
+            response = _connector.getResponse("OPTIONS * HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
                 "Content-Type: text/plain; charset=utf-8\r\n" +
@@ -1305,7 +1238,7 @@ public class HttpConnectionTest
             checkContains(response, offset, "HTTP/1.1 200");
 
             offset = 0;
-            response = connector.getResponse("GET * HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET * HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
                 "Content-Type: text/plain; charset=utf-8\r\n" +
@@ -1318,7 +1251,7 @@ public class HttpConnectionTest
             checkContains(response, offset, "HTTP/1.1 400");
 
             offset = 0;
-            response = connector.getResponse("GET ** HTTP/1.1\r\n" +
+            response = _connector.getResponse("GET ** HTTP/1.1\r\n" +
                 "Host: localhost\r\n" +
                 "Transfer-Encoding: chunked\r\n" +
                 "Content-Type: text/plain; charset=utf-8\r\n" +
@@ -1346,7 +1279,7 @@ public class HttpConnectionTest
         {
             int offset = 0;
 
-            response = connector.getResponse("CONNECT www.webtide.com:8080 HTTP/1.1\r\n" +
+            response = _connector.getResponse("CONNECT www.webtide.com:8080 HTTP/1.1\r\n" +
                 "Host: myproxy:8888\r\n" +
                 "\r\n", 200, TimeUnit.MILLISECONDS);
             checkContains(response, offset, "HTTP/1.1 200");
@@ -1365,23 +1298,47 @@ public class HttpConnectionTest
         String chunk1 = "0123456789ABCDEF";
         String chunk2 = IntStream.range(0, 64).mapToObj(i -> chunk1).collect(Collectors.joining());
         long dataLength = chunk1.length() + chunk2.length();
-        server.stop();
-        server.setHandler(new AbstractHandler()
+        _server.stop();
+        _server.setHandler(new Handler.Processor(Invocable.InvocationType.BLOCKING)
         {
             @Override
-            public void handle(String target, Request jettyRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
+            public void process(Request request, Response response, Callback callback)
             {
-                jettyRequest.setHandled(true);
-                IO.copy(request.getInputStream(), IO.getNullStream());
+                while (true)
+                {
+                    Content content = request.readContent();
+                    if (content == null)
+                    {
+                        try
+                        {
+                            CountDownLatch blocker = new CountDownLatch(1);
+                            request.demandContent(blocker::countDown);
+                            blocker.await();
+                        }
+                        catch (InterruptedException e)
+                        {
+                            // ignored
+                        }
+                        continue;
+                    }
+
+                    if (content.hasRemaining())
+                        content.getByteBuffer().clear();
+                    content.release();
+                    if (content.isLast())
+                        break;
+                }
 
                 HttpConnection connection = HttpConnection.getCurrentConnection();
                 long bytesIn = connection.getBytesIn();
                 assertThat(bytesIn, greaterThan(dataLength));
+
+                callback.succeeded();
             }
         });
-        server.start();
+        _server.start();
 
-        LocalEndPoint localEndPoint = connector.executeRequest("" +
+        LocalConnector.LocalEndPoint localEndPoint = _connector.executeRequest("" +
             "POST / HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Content-Length: " + dataLength + "\r\n" +
@@ -1398,7 +1355,7 @@ public class HttpConnectionTest
         assertEquals(response.getStatus(), HttpStatus.OK_200);
         localEndPoint.close();
 
-        localEndPoint = connector.executeRequest("" +
+        localEndPoint = _connector.executeRequest("" +
             "POST / HTTP/1.1\r\n" +
             "Host: localhost\r\n" +
             "Transfer-Encoding: chunked\r\n" +
@@ -1419,6 +1376,131 @@ public class HttpConnectionTest
         response = HttpTester.parseResponse(localEndPoint.getResponse());
         assertEquals(response.getStatus(), HttpStatus.OK_200);
         localEndPoint.close();
+    }
+
+    @Test
+    public void testBadURI() throws Exception
+    {
+        String request = """
+            GET /ambiguous/doubleSlash// HTTP/1.0
+            Host: whatever
+            
+            """;
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986_UNAMBIGUOUS);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.UNSAFE);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+    }
+
+    @Test
+    public void testAmbiguousParameters() throws Exception
+    {
+        String request = """
+            GET /ambiguous/..;/path HTTP/1.0\r
+            Host: whatever\r
+            \r
+            """;
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.DEFAULT);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.LEGACY);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+    }
+
+    @Test
+    public void testAmbiguousSegments() throws Exception
+    {
+        String request = """
+            GET /ambiguous/%2e%2e/path HTTP/1.0\r
+            Host: whatever\r
+            \r
+            """;
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.DEFAULT);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.LEGACY);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+    }
+
+    @Test
+    public void testAmbiguousSeparators() throws Exception
+    {
+        String request = """
+            GET /ambiguous/%2f/path HTTP/1.0\r
+            Host: whatever\r
+            \r
+            """;
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.DEFAULT);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(new UriCompliance("Test", EnumSet.noneOf(UriCompliance.Violation.class)));
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.LEGACY);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+    }
+
+    @Test
+    public void testAmbiguousPaths() throws Exception
+    {
+        String request = """
+            GET /unnormal/.././path/ambiguous%2f%2e%2e/%2e;/info HTTP/1.0\r
+            Host: whatever\r
+            \r
+            """;
+
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.from(EnumSet.of(
+            UriCompliance.Violation.AMBIGUOUS_PATH_SEPARATOR,
+            UriCompliance.Violation.AMBIGUOUS_PATH_SEGMENT,
+            UriCompliance.Violation.AMBIGUOUS_PATH_PARAMETER)));
+        assertThat(_connector.getResponse(request), Matchers.allOf(
+            startsWith("HTTP/1.1 200"),
+            containsString("pathInContext=/path/ambiguous%2F../info")));
+    }
+
+    @Test
+    public void testAmbiguousEncoding() throws Exception
+    {
+        String request = """
+            GET /ambiguous/encoded/%25/path HTTP/1.0\r
+            Host: whatever\r
+            \r
+            """;
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.DEFAULT);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.LEGACY);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.UNSAFE);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+
+        UriCompliance custom = new UriCompliance("Custom", EnumSet.complementOf(
+            EnumSet.of(UriCompliance.Violation.AMBIGUOUS_PATH_ENCODING)));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(custom);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+    }
+
+    @Test
+    public void testAmbiguousDoubleSlash() throws Exception
+    {
+        String request = """
+            GET /ambiguous/doubleSlash// HTTP/1.0
+            Host: whatever
+            
+            """;
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.DEFAULT);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986_UNAMBIGUOUS);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 400"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.LEGACY);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.RFC3986);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
+        _connector.getBean(HttpConnectionFactory.class).getHttpConfiguration().setUriCompliance(UriCompliance.UNSAFE);
+        assertThat(_connector.getResponse(request), startsWith("HTTP/1.1 200"));
     }
 
     private int checkContains(String s, int offset, String c)
